product details change with stocknumber
